# faex

./: README.md  pyproject.toml
examples/: sample_router.py
src/faex/: __init__.py  analyzer.py  cli.py  models.py  output.py  parser.py
