[project]
name = "faex"
version = "0.1.0"
description = "FastAPI Exception Validator - Static analysis tool for validating exception declarations in FastAPI endpoints"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "hail-kang" }]
requires-python = ">=3.10"
keywords = ["fastapi", "exceptions", "static-analysis", "linting", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
faex = "faex.cli:main"

[project.urls]
Homepage = "https://github.com/hail-kang/faex"
Repository = "https://github.com/hail-kang/faex"
Issues = "https://github.com/hail-kang/faex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faex"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["faex"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=faex --cov-report=term-missing"

[tool.coverage.run]
source = ["src/faex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
